--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <ul>
              <li><a href="#home">Home</a></li>
             <li><a href="#tasks">Tasks</a></li>
-            <li><a href="#refer">Refer</a></li>
+           <!-- <li><a href="#refer">Refer</a></li>-->
             <li><a href="#tap">Tap (Main)</a></li>
             <li><a href="#boost">Boost</a></li>
              <li><a href="#board">Board</a></li>
