--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <li><a href="#tasks">Tasks</a></li>
             <li><a href="#tap">Tap (Main)</a></li>
             <li><a href="#boost">Boost</a></li>
-             <li><a href="#board">Board</a></li>
+            <!-- <li><a href="#board">Board</a></li>-->
         </ul>
     </nav>
 
