--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
     </nav>
 
     <script src="script.js"></script>
+     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
 </html>
