--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div class="container" id="home">
+        <h1 id="username">Hello, User!</h1>
         <h1>Welcome to Kwandala</h1>
         <p>Tap to earn golden Kwandala coins and boost your earnings with various activities!</p>
     </div>
@@ -57,7 +58,7 @@
             <!-- <li><a href="#board">Board</a></li>-->
         </ul>
     </nav>
-
+<script src="users.js"></script>
     <script src="script.js"></script>
      <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
