--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <meta http-equiv="Expires" content="0">
     <title>Kwandala</title>
     <link rel="stylesheet" href="styles.css">
+     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
     <div class="container" id="home">
