--- a/index.html
+++ b/index.html
@@ -59,7 +59,32 @@
             <!-- <li><a href="#board">Board</a></li>-->
         </ul>
     </nav>
-<script src="users.js"></script>
+  <script>
+        // Ensure Telegram WebApp object is available
+        if (window.Telegram.WebApp) {
+            // Get the initData
+            const initData = window.Telegram.WebApp.initData;
+
+            // Parse the initData string into an object (assuming it's URL-encoded)
+            const params = new URLSearchParams(initData);
+            const webAppInitData = {};
+
+            params.forEach((value, key) => {
+                webAppInitData[key] = value;
+            });
+
+            // Check if user data is available and get the username
+            if (webAppInitData.user) {
+                const user = JSON.parse(webAppInitData.user);
+                const username = user.username || 'Guest'; // Default to 'Guest' if username is not available
+
+                // Display the username in the HTML
+                document.getElementById('username').textContent = `Hello, ${username}!`;
+            } else {
+                document.getElementById('username').textContent = 'Hello, Guest!';
+            }
+        }
+    </script>
     <script src="script.js"></script>
      <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
