--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="container" id="board" style="display: none;">
-        <h1>Board</h1>
+        <h1>Board11</h1>
         <p>Check out the leaderboard to see top earners!</p>
     </div>
 
@@ -54,7 +54,7 @@
         <ul>
              <li><a href="#home">Home</a></li>
             <li><a href="#tasks">Tasks</a></li>
-            <li><a href="#tap">Tap (Main)</a></li>
+            <li><a href="#tap">Tap 1(Main)</a></li>
             <li><a href="#boost">Boost</a></li>
             <!-- <li><a href="#board">Board</a></li>-->
         </ul>
