--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Kwandala</title>
     <link rel="stylesheet" href="styles.css">
      <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container" id="home">
@@ -52,7 +53,7 @@
 
     <nav>
         <ul>
-             <li><a href="#home">Home</a></li>
+             <li><a href="#home"><i class="fa fa-home" style="font-size:36px"></i></a></li>
             <li><a href="#tasks">Tasks</a></li>
             <li><a href="#tap">Tap 1(Main)</a></li>
             <li><a href="#boost">Boost</a></li>
