--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     <nav>
         <ul>
              <li><a href="#home"><i class="fa fa-home" style="font-size:36px"></i></a></li>
-            <li><a href="#tasks">Tasks</a></li>
+            <li><a href="#tasks">
+<i class="fa fa-tasks" style="font-size:36px"></i></a></li>
             <li><a href="#tap">Tap 1(Main)</a></li>
             <li><a href="#boost">Boost</a></li>
             <!-- <li><a href="#board">Board</a></li>-->
