--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
              <li><a href="#home"><i class="fa fa-home" style="font-size:36px"></i></a></li>
             <li><a href="#tasks">
 <i class="fa fa-tasks" style="font-size:36px"></i></a></li>
-            <li><a href="#tap">Tap 1(Main)</a></li>
-            <li><a href="#boost">Boost</a></li>
+            <li><a href="#tap"><i class='fas fa-user-friends' style='font-size:36px'></i></a></li>
+            <li><a href="#boost"><i class='fas fa-wallet' style='font-size:36px'></i></a></li>
             <!-- <li><a href="#board">Board</a></li>-->
         </ul>
     </nav>
