--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles.css">
      <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
 <body>
     <div class="container" id="home">
@@ -56,8 +57,8 @@
              <li><a href="#home"><i class="fa fa-home" style="font-size:36px"></i></a></li>
             <li><a href="#tasks">
 <i class="fa fa-tasks" style="font-size:36px"></i></a></li>
-            <li><a href="#tap"><i class='fa fa-user-friends' style='font-size:36px'></i></a></li>
-            <li><a href="#boost"><i class='fa fa-wallet' style='font-size:36px'></i></a></li>
+            <li><a href="#tap"><i class='fas fa-user-friends' style='font-size:36px'></i></a></li>
+            <li><a href="#boost"><i class='fas fa-wallet' style='font-size:36px'></i></a></li>
             <!-- <li><a href="#board">Board</a></li>-->
         </ul>
     </nav>
