--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <li><a href="#tasks">
 <i class="fa fa-tasks" style="font-size:36px"></i></a></li>
             <li><a href="#tap"><i class='fas fa-user-friends' style='font-size:36px'></i></a></li>
-            <li><a href="#boost"><i class='fas fa-wallet' style='font-size:36px'></i></a></li>
+            <li><a href="#boost"><i class='fas fa-wallet' style='font-size:36px'></i><i style='font-size:24px' class='fas'>&#xf555;</i></a></li>
             <!-- <li><a href="#board">Board</a></li>-->
         </ul>
     </nav>
