--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
      <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+<script src="https://kit.fontawesome.com/3256a9e1b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container" id="home">
@@ -58,7 +59,7 @@
             <li><a href="#tasks">
 <i class="fa fa-tasks" style="font-size:36px"></i></a></li>
             <li><a href="#tap"><i class='fas fa-user-friends' style='font-size:36px'></i></a></li>
-            <li><a href="#boost"><i class='fas fa-wallet' style='font-size:36px'></i><i style='font-size:24px' class='fas'>&#xf555;</i></a></li>
+            <li><a href="#boost"><i class="fa-solid fa-wallet"></i></a></li>
             <!-- <li><a href="#board">Board</a></li>-->
         </ul>
     </nav>
