--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 <script src="https://kit.fontawesome.com/3256a9e1b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container" id="home">
-        <h1 id="username">Hello, User!</h1>
-        <h1>Welcome to Kwandala</h1>
-        <p>Tap to earn golden Kwandala coins and boost your earnings with various activities!</p>
+    <div class="container" id="home"><div class="sidebar">
+        <img src="user-icon.png" alt="User Icon" class="user-icon">
+        <h2 id="username">Hello, User!</h2>
+        <div id="user-ranking">Rank: Beginner</div>
+        <div id="user-coins">Coins: 0</div>
+    </div>
     </div>
 
     <div class="container" id="tasks" style="display: none;">
