--- a/index.html
+++ b/index.html
@@ -14,12 +14,20 @@
 <script src="https://kit.fontawesome.com/3256a9e1b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container" id="home"><div class="sidebar">
-        <img src="user-icon.png" alt="User Icon" class="user-icon">
-        <h2 id="username">Hello, User!</h2>
-        <div id="user-ranking">Rank: Beginner</div>
-        <div id="user-coins">Coins: 0</div>
-    </div>
+    <div class="container" id="home">
+
+         <div class="user-info">
+            <img src="user-icon.png" alt="User Icon" class="user-icon">
+            <div class="user-details">
+                <h2 id="username">Hello, Guest!</h2>
+                <p id="user-rank">Rank: Beginner</p>
+                <p id="user-coins">Coins: 0</p>
+            </div>
+        </div>
+    <h1>Welcome to Kwandala</h1>
+        <p>Tap to earn golden Kwandala coins and boost your earnings with various activities!</p>
+    
+        
     </div>
 
     <div class="container" id="tasks" style="display: none;">
