--- a/index.html
+++ b/index.html
@@ -13,22 +13,18 @@
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 <script src="https://kit.fontawesome.com/3256a9e1b4.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <div class="container" id="home">
-
-         <div class="user-info">
-            <img src="user-icon.png" alt="User Icon" class="user-icon">
-            <div class="user-details">
-                <h2 id="username">Hello, Guest!</h2>
-                <p id="user-rank">Rank: Beginner</p>
-                <p id="user-coins">Coins: 0</p>
-            </div>
+<body><div class="container" id="home">
+    <div class="user-info">
+        <img src="user-icon.png" alt="User Icon" class="user-icon">
+        <div class="user-details">
+            <h2 id="username">Hello, Guest!</h2>
+            <p id="user-rank">Rank: Beginner</p>
+            <p id="user-coins">Coins: 0</p>
         </div>
-    <h1>Welcome to Kwandala</h1>
-        <p>Tap to earn golden Kwandala coins and boost your earnings with various activities!</p>
-    
-        
     </div>
+    <h1>Welcome to Kwandala</h1>
+    <p>Tap to earn golden Kwandala coins and boost your earnings with various activities!</p>
+</div>
 
     <div class="container" id="tasks" style="display: none;">
         <h1>Tasks</h1>
