--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
             <p id="user-coins">Coins: 0</p>
         </div>
     </div>
-    <h1>Welcome to Kwandala</h1>
-    <p>Tap to earn golden Kwandala coins and boost your earnings with various activities!</p>
+     <div id="remaining-clicks">Remaining Clicks: 50</div>
+        <img id="tap-button" src="coin.png" alt="Tap to Earn" width="250" height="250" 
+          style="width:250px; height:250px;"/>
+          <br>
+          <br>
 </div>
 
     <div class="container" id="tasks" style="display: none;">
