--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <img src="user-icon.png" alt="User Icon" class="user-icon">
         <div class="user-details">
             <h2 id="username">Hello, Guest!</h2>
-            <p id="user-rank">Rank: Beginner</p>
-            <p id="user-coins">Coins: 0</p>
+           <P id="resource-count">Kwandala Coins: 0</p>
+        <p id="user-ranking">Ranking: 0</p>
+        <p id="user-league">League: None</p>
         </div>
     </div>
      <div id="remaining-clicks">Remaining Clicks: 50</div>
