--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <img src="user-icon.png" alt="User Icon" class="user-icon">
         <div class="user-details">
             <h2 id="username">Hello, Guest!</h2>
-           <P id="resource-count" id="user-coins">Kwandala Coins: 0</p>
-        <p id="user-ranking" id="user-rank">Ranking: 0</p>
+           <P id="resource-count" >Kwandala Coins: 0</p>
+        <p id="user-ranking">Ranking: 0</p>
         <p id="user-league">League: None</p>
         </div>
     </div>
