--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body><div class="container" id="home">
     <div class="user-info">
-        <img src="user-icon.png" alt="User Icon" class="user-icon">
+       <!-- <img src="user-icon.png" alt="User Icon" class="user-icon">-->
         <div class="user-details">
             <h2 id="username">Hello, Guest!</h2>
            <P id="resource-count" >Kwandala Coins: 0</p>
