--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
        <!-- <img src="user-icon.png" alt="User Icon" class="user-icon">-->
         <div class="user-details">
             <h2 id="username">Hello, Guest!</h2>
-           <P id="resource-count" >Kwandala Coins: 0</p>
-        <p id="user-ranking">Ranking: 0</p>
-        <p id="user-league">League: None</p>
+           <span id="resource-count" >Kwandala Coins: 0</span>
+        <span id="user-ranking">Ranking: 0</span>
+        <span id="user-league">League: None</span>
         </div>
     </div>
      <div id="remaining-clicks">Remaining Clicks: 50</div>
