--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 <script src="https://kit.fontawesome.com/3256a9e1b4.js" crossorigin="anonymous"></script>
 </head>
-<body><div class="container" id="home">
+<body>
+    <div class="container" id="home">
     <div class="user-info">
        <!-- <img src="user-icon.png" alt="User Icon" class="user-icon">-->
         <div class="user-details">
             <h2 id="username">Hello, Guest!</h2>
-           <span id="resource-count" >Kwandala Coins: 0</span>
+           
         <span id="user-ranking">Ranking: 0</span>
         <span id="user-league">League: None</span>
         </div>
     </div>
+        <span id="resource-count" >Kwandala Coins: 0</span>
      <div id="remaining-clicks">Remaining Clicks: 50</div>
+        
         <img id="tap-button" src="coin.png" alt="Tap to Earn" width="250" height="250" 
           style="width:250px; height:250px;"/>
           <br>
