--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
              <li><a href="#home"><i class="fa fa-home" style="font-size:36px"></i></a></li>
             <li><a href="#tasks">
 <i class="fa fa-tasks" style="font-size:36px"></i></a></li>
-            <li><a href="#tap"><i class='fas fa-user-friends' style='font-size:36px'></i></a></li>
+            <li><a href="#refer"><i class='fas fa-user-friends' style='font-size:36px'></i></a></li>
             <li><a href="#boost"><i class="fa-solid fa-wallet" style='font-size:36px'></i></a></li>
             <!-- <li><a href="#board">Board</a></li>-->
         </ul>
