--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="user-ranking">Ranking: 0</div>
         <div id="user-league">League: None</div>
         <div id="remaining-clicks">Remaining Clicks: 50</div>
-        <img id="tap-button" src="coin.png" alt="Tap to Earn" width="250" height="250" 
+        <img id="tap-button" src="icon.png" alt="Tap to Earn" width="250" height="250" 
           style="width:250px; height:250px;"/>
           <br>
           <br>
