--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
        
      <div id="remaining-clicks">Remaining Clicks: 50</div>
         
-        <img id="tap-button" src="1729208006508.jpg" alt="Tap to Earn" width="250" height="250" 
+        <img id="tap-button" src="icon.png" alt="Tap to Earn" width="250" height="250" 
           style="width:250px; height:250px;"/>
           <br>
           <br>
